@@ -108,7 +108,7 @@ namespace Mono.Xaml
 			try {
 				result = Value.ToObject (null, top);
 			} finally {
-				NativeMethods.value_free_value2 (top);
+				NativeMethods.value_delete_value2 (top);
 			}
 
 			return result;
